fixed gap

--- a/pages/MatchUps/styles/MatchUpId.module.scss
+++ b/pages/MatchUps/styles/MatchUpId.module.scss
@@ -58,7 +58,6 @@
       flex-direction: column;
       align-items: flex-start;
       justify-content: center;
-      gap: 0.5em;
 
       p {
         max-height: 10em;
